--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -25,6 +25,9 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.DEPLOY_KEY }}
       - name: Push
-        run: git remote -v
+        run: |
+          git remote add origin-ssh git@github.com:erlloyd/squash-and-merge.git
+          git remote -v
+          git push origin-ssh master
 
         
