--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -30,6 +30,6 @@ jobs:
         run: |
           git remote add origin-ssh git@github.com:erlloyd/squash-and-merge.git
           git remote -v
-          git push origin-ssh master
+          git push --tags origin-ssh master
 
         
