--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -7,11 +7,11 @@ on:
 
 jobs:
   test:
-    if: "! contains(toJSON(github.event.commits.*.msg), '[skip ci]')"
     # Job name is
     name: Verify, Bump Version, and Tag for Release
     # This job runs on Linux
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
       - uses: actions/checkout@v2
       - name: Print ref
