--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -11,7 +11,7 @@ jobs:
     name: Verify, Bump Version, and Tag for Release
     # This job runs on Linux
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    if: "!contains(github.event.head_commit.message, '[automated release]')"
     steps:
       - uses: actions/checkout@v2
       - name: Print ref
@@ -20,15 +20,8 @@ jobs:
         run: |
           git config --global user.name "test-auto-user"
           git config --global user.email "test-auto-user"
-          npm version major -m "Releasing %s [skip ci]"
-      - name: Install SSH Client 🔑
-        uses: webfactory/ssh-agent@v0.2.0
-        with:
-          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+          npm version major -m "Releasing %s [automated release]"
       - name: Push
-        run: |
-          git remote add origin-ssh git@github.com:erlloyd/squash-and-merge.git
-          git remote -v
-          git push --tags origin-ssh master
+        run: git push --tags origin master
 
         
